concord_macros/tests/trybuild/fail/codegen_contract/removed_numeric_private_namespace.rs
fn main() {
    let _ = concord_core::__private::v1::GENERATED_API_COMPATIBILITY;
}
